	audit and syslog after the potential chroot.
	* src/groupadd.c: Check atexit failures.
	* src/groupadd.c: Return E_SUCCESS instead of exit'ing at the end
	of main().
	* NEWS, src/groupadd.c, man/groupadd.8.xml: Add --root option. Open
	audit and syslog after the potential chroot.
	* src/groupmod.c: The index of long options is not used.

2011-10-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/ja/Makefile.am, man/fr/Makefile.am, man/ru/Makefile.am,
	man/sv/Makefile.am, man/pl/Makefile.am, man/zh_CN/Makefile.am,
	man/it/Makefile.am, man/Makefile.am: Include man_nopam in
	EXTRA_DIST only when USE_PAM (they are already in man_MANS
	otherwise).

2011-10-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/su.1.xml: Document that su -c does not providea controlling
	terminal.

2011-10-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Fix typo.
	* src/useradd.c: Likewise.
	* lib/nscd.c: Remove unused variable.
	* lib/prototypes.h, libmisc/cleanup.c, lib/spawn.c, src/chage.c:
	Add splint annotations.
	* src/sulogin.c (main): env is only used when USE_PAM is not set.

2011-10-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/LOGIN_STRING.xml: Fix typo.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes, libmisc/basename.c (Basename): Input is a
	constant string.
	* lib/prototypes.h, lib/spawn.h, lib/spawn.c, src/userdel.c,
	lib/nscd.c, lib/Makefile.am: Delete spawn.h. Move from spawn.h to
	prototypes.h.
	* src/userdel.c: Remove unused variables.
	* lib/nscd.c: Remove unused header files.
	* lib/nscd.c: Add the program name to error messages.
	* lib/nscd.c: Indicate when nscd does not terminate normally (signal).
	* lib/spawn.c: Updated header.
	* lib/spawn.c: Flush stdout and stderr to avoid inheriting from
	ongoing buffers.
	* lib/spawn.c: Avoid implicit conversion of pointer to boolean.
	* lib/spawn.c: Replace perror by a complete message.