@@ -33,6 +33,8 @@ shadow-4.1.4.3 -> shadow-4.1.5					UNRELEASED
     specified.
 - groupadd
   * Add --root option.
+- groupdel
+  * Add --root option.
 - groupmod
   * Fixed groupmod when configured with --enable-account-tools-setuid.
   * When the gshadow file exists but there are no gshadow entries, an entry
