@@ -18,6 +18,11 @@
 	* NEWS, src/groupadd.c, man/groupadd.8.xml: Add --root option. Open
 	audit and syslog after the potential chroot.
 	* src/groupmod.c: The index of long options is not used.
+	* src/groupdel.c: Add process_flags().
+	* src/groupdel.c, man/groupdel.8.xml: Add --help option.
+	* NEWS, src/groupdel.c, man/groupdel.8.xml: Add --root option. Open
+	audit and syslog after the potential chroot.
+	* src/groupdel.c: Check atexit failures.
 
 2011-10-22  Nicolas François  <nicolas.francois@centraliens.net>
 
